ros2_ws/log/build_2023-06-07_00-46-43/kalbot_controller/stderr.log
  File "/home/zubeyir48/ros2_ME462_ws/install/kalbot_controller/lib/python3.10/site-packages/kalbot_controller/kalbot_controller.py", line 5
    from kalbot_interfaces.msg import 
                                      ^
SyntaxError: invalid syntax

